refactor: replace Collectors.toList() with Stream.toList()
Use JDK 16+ unmodifiable list collector in JpaUserDetailsService and JwtAccessTokenIssuer; drop unused Collectors imports.